infra/ailab/apps/gpmidi-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpmidi-web
  namespace: gpmidi-ml
  labels:
    app: gpmidi-web
spec:
  type: ClusterIP
  selector:
    app: gpmidi-web
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
